[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Magical Story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Magical Story Outline.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scr/main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.835294, 0.835294, 0.835294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="title_lbl" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "2D Platformer Template"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 448.0
margin_top = 204.0
margin_right = 576.0
margin_bottom = 396.0

[node name="play_btn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 48 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.87451, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.368627, 0.368627, 0.368627, 1 )
text = "Play"
flat = true

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 128.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 16 )

[node name="options_btn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 128.0
margin_bottom = 120.0
rect_min_size = Vector2( 128, 48 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.87451, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.368627, 0.368627, 0.368627, 1 )
text = "Options"
flat = true

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 128.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 16 )

[node name="quit_btn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 128.0
margin_bottom = 192.0
rect_min_size = Vector2( 128, 48 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.87451, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.368627, 0.368627, 0.368627, 1 )
text = "Quit"
flat = true

[node name="option_menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 600.0
margin_bottom = 600.0

[node name="Panel" type="Panel" parent="option_menu"]
margin_left = 272.0
margin_top = 140.0
margin_right = 752.0
margin_bottom = 460.0
rect_min_size = Vector2( 480, 320 )
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="option_menu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="HBoxContainer" type="HBoxContainer" parent="option_menu/Panel/VBoxContainer"]
margin_right = 464.0
margin_bottom = 38.0

[node name="options_close_btn" type="Button" parent="option_menu/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 21.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<"
flat = true

[node name="Label" type="Label" parent="option_menu/Panel/VBoxContainer/HBoxContainer"]
margin_left = 25.0
margin_top = 3.0
margin_right = 464.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Options"
align = 1

[node name="Control2" type="Control" parent="option_menu/Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 464.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 16 )

[node name="Label2" type="Label" parent="option_menu/Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 464.0
margin_bottom = 94.0
text = "Audio Volume"

[node name="audio_slider" type="HSlider" parent="option_menu/Panel/VBoxContainer"]
margin_top = 98.0
margin_right = 464.0
margin_bottom = 114.0
min_value = -6.0
max_value = 6.0

[node name="Control3" type="Control" parent="option_menu/Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 464.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 16 )

[node name="Label3" type="Label" parent="option_menu/Panel/VBoxContainer"]
margin_top = 138.0
margin_right = 464.0
margin_bottom = 170.0
text = "Sorry mate no more option as of yet"
autowrap = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
[connection signal="drag_ended" from="option_menu/Panel/VBoxContainer/audio_slider" to="." method="_on_audio_slider_drag_ended"]
